# isqr

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: lib.rs
src/routes/: create.rs  home.rs  not_found.rs  redirect.rs
