[package]
name = "isqr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
worker = "0.3.1"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"